flux/config/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway
  annotations:
    external-dns.alpha.kubernetes.io/target: router02.net.gewis.nl
spec:
  gatewayClassName: cilium
  listeners:
    - name: websecure
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - name: wildcard-cbc-gewis-nl-tls
